rrr (1.20-1) bullseye; urgency=medium

  * RUNNING DEVELOPMENT RELEASE

  * Changes:
    * Automatic restart of RRR deamon upon failure

  * Features:
    * Option in cacher to revive messages older than a specified age
    * Control maximum response size in httpclient
    * Control maximum request size in httpserver

  * Improvements:
    * Performance for larger messages in misc. modules

  * Fixes:
    * Busy-waiting on thread state change causing long startup times
    * Cacher getting killed off on large writes to message DB
    * Large messages sometimes failing to be sent due to incorrect
      return values in some send functions
    * Send allow-origin header in OPTIONS responses to satisfy preflight checks

  * Under the hood:
    * Common Message DB functions for httpclient and cacher

 -- Atle Solbakken <atle@goliathdns.no>  Fri, 10 Sep 2021 17:38:07 +0200

rrr (1.19-1) bullseye; urgency=medium

  * Features:
    * HTTP server can extract values from JSON
    * Option in HTTP server to prevent any body from being parsed
    * Added memory cache in cacher module
    * Message taint option in httpclient to prevent messages from
      backfiring.

  * Fixes:
    * Crash in MQTT client upon reconnect attempts due to incorrect
      cast.
    * Fix non-working will and retain messages in MQTT broker.
    * Incorrect default port numbers in MQTT broker
    * MQTT ping messages were not being sent
    * Sending in httpserver stopped for longer data if nothing else
      were added to be sent or read.
    * Messages were sorted in reverse order in IP module
    * Ensure correct sorting in IP module by using and index
      instead of timestamp.
    * Missing default port number in mqtt client
    * Incorrect byte counting in misc. send functions causing
      problems with longer messages.
    * Broken SQL generation in mysql module due to error in
      string builder.
    * Allow spaces after certain HTTP/1 header fields