@@ -115,6 +115,10 @@ void rrr_http_transaction_request_body_format_set (
 		struct rrr_http_transaction *transaction,
 		enum rrr_http_body_format body_format
 );
+int rrr_http_transaction_request_content_type_set (
+		struct rrr_http_transaction *transaction,
+		const char *content_type
+);
 int rrr_http_transaction_endpoint_path_get (
 		char **result,
 		struct rrr_http_transaction *transaction
